--- a/css/styles.css
+++ b/css/styles.css
@@ -2,36 +2,41 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+body {
+    background-color: #1d2630;
+    color: white;
+}
+
 table {
-  background-color: white;
-  text-align: center;
-  border-collapse: collapse;
-  width: 100%;
-  border: 2px solid crimson;
-  margin: 0px;
+    text-align: center;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0px;
 }
 
 th {
-  font-size: 18px;
-  text-align: center;
+    background-color: crimson !important;
+    font-size: 18px;
+    text-align: center;
 }
 
 td {
-  font-size: 15px;
+    font-size: 15px;
 }
 
 th,
 td {
-  padding: 10px;
+    padding: 10px;
 }
 
 tr {
-  font-weight: 550;
+    font-weight: 550;
 }
 
 thead {
-  background-color: crimson;
-  color: white;
+    color: white;
 }
-tr:nth-child(even) {
-  background-color: rgb(226, 175, 185);
+
+button {
+    margin: 10px 0;
+}
